# retrieval-augmented-generation-with-Langchain

RAG-Tutorial/: [Bonus] RAG_using_LlamaIndex.ipynb  requirements.txt
RAG-Tutorial/LangChain_Expression_Language/: main.ipynb
RAG-Tutorial/Module_1_IO/: main.ipynb
RAG-Tutorial/Module_2_Retriver/: main.ipynb
RAG-Tutorial/Module_3_Agents/: main.ipynb
RAG-Tutorial/Module_4_Chains/: main.ipynb
RAG-Tutorial/Module_5_Memory/: main.ipynb
RAG_with_PDF_production/: app.py  llm.py  llm2.py  load_data.py  requirements.txt  test.ipynb  test.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/: README.md
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/: pyproject.toml
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/: main.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/agent/: hospital_rag_agent.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/models/: hospital_rag_query.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/tools/: wait_times.py
RAG_with_Tabular_Databases_Using_Knowledge_Graph_and_LLM_Agents/5_Deploy_LangChain_Agent/chatbot_api/src/utils/: async_utils.py
(+37 files in other folders)
